--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,6 @@
     "name": "sirian/helpers",
     "autoload": {
         "psr-0": { "Sirian\\": "" }
-    }
+    },
+    "target-dir": "Sirian/Helpers"
 }
